Logo image file renamed to logo_greenfield_foundation.jpg for easier finding. Fixed problem withgallery figure captions not showing on Our Team template. Text amendments made to Our Organisation template.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -261,7 +261,7 @@ footer {
     height: 500px;
     max-width: 100%;
     min-width: 88%;
-    display: block;
+    /* display: block; */
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
